# ChangeLog for media-libs/libkgeomap
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libkgeomap/ChangeLog,v 1.30 2013/03/31 16:58:47 ago Exp $

  31 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libkgeomap-3.0.0.ebuild:
  Stable for x86, wrt bug #462890

  31 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libkgeomap-3.0.0.ebuild:
  Stable for amd64, wrt bug #462890

*libkgeomap-3.1.0 (29 Mar 2013)

  29 Mar 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  +libkgeomap-3.1.0.ebuild:
  Version bump

*libkgeomap-3.0.0 (09 Feb 2013)

  09 Feb 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  -libkgeomap-3.0.0_rc.ebuild, +libkgeomap-3.0.0.ebuild:
  Version bump

*libkgeomap-3.0.0_rc (07 Feb 2013)

  07 Feb 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  +libkgeomap-3.0.0_rc.ebuild:
  Version bump

  07 Feb 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  -libkgeomap-2.6.0.ebuild, -libkgeomap-2.7.0.ebuild, -libkgeomap-2.8.0.ebuild:
  Cleanup

  27 Oct 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> libkgeomap-2.9.0.ebuild:
  x86 stable wrt bug #438352

  16 Oct 2012; Agostino Sarubbo <ago@gentoo.org> libkgeomap-2.9.0.ebuild:
  Stable for amd64, wrt bug #438352

  25 Aug 2012; Johannes Huber <johu@gentoo.org> -libkgeomap-2.5.0.ebuild:
  Remove old.

  25 Aug 2012; Johannes Huber <johu@gentoo.org> libkgeomap-2.6.0.ebuild:
  Stable for x86, wrt bug #429842

*libkgeomap-2.8.0 (11 Aug 2012)

  11 Aug 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +libkgeomap-2.8.0.ebuild:
  Version bump, bug 430802, thanks creffett

  06 Aug 2012; Agostino Sarubbo <ago@gentoo.org> libkgeomap-2.6.0.ebuild:
  Stable for amd64, wrt bug #429842

*libkgeomap-2.7.0 (09 Jul 2012)

  09 Jul 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +libkgeomap-2.7.0.ebuild:
  Version bump

*libkgeomap-2.6.0 (07 Jun 2012)

  07 Jun 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -libkgeomap-2.4.1.ebuild, -libkgeomap-2.6.0_beta3.ebuild,