@@ -1,22 +1,22 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libkgeomap/libkgeomap-2.9.0.ebuild,v 1.3 2012/10/27 04:23:08 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libkgeomap/libkgeomap-3.2.0_beta2.ebuild,v 1.1 2013/05/11 13:39:02 dilfridge Exp $
 
-EAPI=4
+EAPI=5
 
-KDE_MINIMAL="4.8"
+KDE_MINIMAL="4.10"
 
 inherit kde4-base
 
 MY_PV=${PV/_/-}
 MY_P="digikam-${MY_PV}"
-SRC_URI="mirror://sourceforge/digikam/${MY_P}.tar.bz2"
+SRC_URI="mirror://kde/unstable/digikam/${MY_P}.tar.bz2"
 
 DESCRIPTION="Wrapper library for world map components as marble, openstreetmap and googlemap"
 HOMEPAGE="http://www.digikam.org/"
 
 LICENSE="GPL-2"
-KEYWORDS="amd64 x86"
+KEYWORDS=""
 IUSE=""
 SLOT=4
 
