@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libkgeomap
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libkgeomap/ChangeLog,v 1.30 2013/03/31 16:58:47 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libkgeomap/ChangeLog,v 1.31 2013/05/11 13:39:02 dilfridge Exp $
+
+*libkgeomap-3.2.0_beta2 (11 May 2013)
+
+  11 May 2013; Andreas K. Huettel <dilfridge@gentoo.org>
+  -libkgeomap-2.9.0.ebuild, +libkgeomap-3.2.0_beta2.ebuild:
+  Add beta version (without keywords)
 
   31 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libkgeomap-3.0.0.ebuild:
   Stable for x86, wrt bug #462890
